force-app/main/default/objects/MigrationObjectRule__mdt/MigrationObjectRule__mdt.object-meta.xml
<CustomObject>
    <description>Pre-seeded known object ordering rules. The relationship resolver uses these to bootstrap common Salesforce hierarchies without a runtime Describe call.</description>
    <label>Migration Object Rule</label>
    <pluralLabel>Migration Object Rules</pluralLabel>
</CustomObject>