force-app/main/default/objects/MigrationObjectRule__mdt/fields/ChildObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectApiName__c</fullName>
    <description>API name of the object that holds the foreign key and must load after the parent. Example: Contact</description>
    <label>Child Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>