force-app/main/default/objects/MigrationObjectRule__mdt/fields/IsAlwaysRequired__c.field-meta.xml
<CustomField>
    <fullName>IsAlwaysRequired__c</fullName>
    <description>When true, the resolver enforces this ordering even if the parent object is not explicitly included in the migration scope. Used for objects where the dependency is implicit (e.g. PricebookEntry always requires both Pricebook2 and Product2).</description>
    <defaultValue>false</defaultValue>
    <label>Always Required</label>
    <type>Checkbox</type>
</CustomField>