force-app/main/default/objects/MigrationObjectRule__mdt/fields/ParentObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectApiName__c</fullName>
    <description>API name of the object that must load first (the parent in the relationship). Example: Account</description>
    <label>Parent Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>